--- a/MIS331ERP_GrpProject/Pages/Login.cshtml
+++ b/MIS331ERP_GrpProject/Pages/Login.cshtml
@@ -9,11 +9,13 @@
 
 <html>
 <head>
-    <title></title>
+    <title>LoginPage</title>
 </head>
 <body>
 <div>
-    
+    <asp:LoginName runat="server"></asp:LoginName> 
+    <input id="Password1" type="password" />
+    <asp:Button runat="server" Text="Login"></asp:Button>
 </div>
 </body>
 </html>
